--- a/src/components/app-section/index.scss
+++ b/src/components/app-section/index.scss
@@ -19,6 +19,8 @@
   .text {
     width: 70%;
     font-size: 7.8125rem;
+    // font-family: Kollektif;
+
     span {
       font-style: italic;
       font-weight: 600;
