--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap");
 
 * {
-  font-family: Kollektif;
+  font-family: Kollektif, Montserrat;
 }
 
 body {
