--- a/src/sections/footer/index.scss
+++ b/src/sections/footer/index.scss
@@ -4,7 +4,7 @@ footer {
   justify-content: space-between;
   padding: 1.875rem;
   img {
-    width: 10%;
+    width: 5%;
   }
   div {
     font-size: 1.4rem;
@@ -15,7 +15,7 @@ footer {
 
   @media screen and (max-width: 1024px) {
     img {
-      width: 15%;
+      width: 10%;
     }
     div {
       font-size: 1.5625rem;
@@ -24,10 +24,10 @@ footer {
   @media screen and (max-width: 768px) {
     flex-direction: column;
     img {
-      width: 40%;
+      width: 20%;
     }
     div {
-      margin-top: 1.5625rem;
+      margin-top: 1remrem;
       font-size: 1.25rem;
       text-align: center;
     }
